# termiNet

./: .env.example  .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  resources.qrc
db/: category_repository.cpp  category_repository.h  communityrepository.cpp  communityrepository.h  databasemanager.cpp  databasemanager.h  thread_repository.cpp  thread_repository.h  user_repository.cpp  user_repository.h
db/login/: loginrepository.cpp  loginrepository.h
db/message/: messagerepository.cpp  messagerepository.h
db/storage/: storagerepository.cpp  storagerepository.h
db/storage_repository/: storagerepository.cpp  storagerepository.h
db/thread/: thread_repository.cpp  thread_repository.h
db/user/: user_repository.cpp  user_repository.h
helpers/: apphelper.cpp  apphelper.h
helpers/api_client/: apiclient.cpp  apiclient.h
helpers/hash_helper/: hashhelper.cpp  hashhelper.h
helpers/message_client/: messageclient.cpp  messageclient.h
helpers/websocket_client/: websocketclient.cpp  websocketclient.h
home/: home.ui
includes/: auth_repository.hpp  db_manager.hpp  user_repository.hpp
includes/controllers/: user_controller.hpp
includes/models/: user_model.hpp
login_signup/: login.cpp  login.h  login.ui  signup.cpp  signup.h  signup.ui
login_signup/widgets/: divider.cpp  divider.h  socials.cpp  socials.h
models/: categorymodel.cpp  categorymodel.h  communitymodel.cpp  communitymodel.h  threadmodel.cpp  threadmodel.h  usermodel.cpp  usermodel.h
models/community/: communitymodel.cpp  communitymodel.h
models/message/: messagemodel.cpp  messagemodel.h
models/thread/: threadmodel.cpp  threadmodel.h
models/user/: authenticateduser.h
screens/community_page/: communitypage.cpp  communitypage.h
screens/community_page/widgets/: communitydescriptionwidget.cpp  communitydescriptionwidget.h
screens/create_community/: createcommunity.cpp  createcommunity.h
screens/create_community/pages/: categoryselectionscreen.cpp  categoryselectionscreen.h  communitybannerpage.cpp  communitybannerpage.h  comunitydescriptionpage.cpp  comunitydescriptionpage.h
screens/create_community/widgets/: categorywidget.cpp  categorywidget.h
screens/home/: home.cpp  home.h  home.ui
screens/message/: messagepage.cpp  messagepage.h
screens/message/widgets/chat_page/: chatpage.cpp  chatpage.h
screens/message/widgets/chat_page/singleMessage/: singlemessage.cpp  singlemessage.h
screens/message/widgets/create_message/: createmessage.cpp  createmessage.h
screens/message/widgets/message/: messagewidget.cpp  messagewidget.h
screens/message/widgets/message_list_view/: messagelistview.cpp  messagelistview.h
screens/profile_view/: profileview.cpp  profileview.h
screens/styles/: buttonStyles.h
screens/widgets/: createpost.cpp  createpost.h  threadwidget.cpp  threadwidget.h
screens/widgets/createPost/: createpost.cpp  createpost.h
screens/widgets/leftNavigation/: leftnavigationwidget.cpp  leftnavigationwidget.h
screens/widgets/replyBox/: replybox.cpp  replybox.h
screens/widgets/thread/: threadwidget.cpp  threadwidget.h
screens/widgets/threadView/: threadview.cpp  threadview.h
screens/widgets/topbar/: customtopbar.cpp  customtopbar.h
sql/: auth_trigger.sql  auth_trigger.sql.autosave  id_generator.sql  login_check.sql  schema.sql  storage_buckets.sql
src/: main.cpp
src/common/style/: styles.h
src/common/theme/: apptheme.cpp  apptheme.h
src/common/type/: types.h
src/common/widgets/: clickable_label.h  divider.h  socials_widget.h
src/controllers/: user_controller.cpp
src/db/: auth_repository.cpp  db_manager.cpp  user_repository.cpp
src/db/manager/: databasemanager.cpp  databasemanager.h
src/helpers/: apphelper.cpp  apphelper.h
src/helpers/validators/: formvalidator.cpp  formvalidator.h
src/models/category/: category_model.cpp  category_model.h
src/models/community/: communitymodel.cpp  communitymodel.h
src/models/message/: messagemodel.cpp  messagemodel.h
src/models/thread/: threadmodel.cpp  threadmodel.h
src/models/user/: authenticateduser.cpp  authenticateduser.h  usermodel.cpp  usermodel.h
src/network/api/: apiclient.cpp  apiclient.h
src/network/category/: categoryrepository.cpp  categoryrepository.h
src/network/community/: communityrepository.cpp  communityrepository.h
src/network/login/: loginrepository.cpp  loginrepository.h
src/network/search/: search_repository.cpp  search_repository.h
src/network/signup/: signup_repository.cpp  signup_repository.h
src/network/threads/: threadrepository.cpp  threadrepository.h
src/network/user/: user_repository.cpp  user_repository.h
src/network/websocket/: websocketclient.cpp  websocketclient.h
src/screens/community/: communitypage.cpp  communitypage.h
src/screens/community/widgets/: community_description_widget.cpp  community_description_widget.h
src/screens/create_community/: createcommunity.cpp  createcommunity.h
src/screens/create_community/widgets/banner_selection/: banner_selection_widget.cpp  banner_selection_widget.h
src/screens/create_community/widgets/category/: category_widget.cpp  category_widget.h
src/screens/home/: home.cpp  home.h
src/screens/login/: login.cpp  login.h
src/screens/message/: messagepage.cpp  messagepage.h
src/screens/profile/: profileview.cpp  profileview.h
src/screens/search/: searchview.cpp  searchview.h
src/screens/signup/: signup.cpp  signup.h
termiNet-main/: CMakeCache.txt  CMakeLists.txt
termiNet-main/db/: databasemanager.cpp  databasemanager.h  thread_repository.cpp  thread_repository.h  user_repository.cpp  user_repository.h
termiNet-main/login_signup/: signup.cpp  signup.h
termiNet-main/login_signup/widgets/: socials.cpp
termiNet-main/models/: threadmodel.h
termiNet-main/screens/home/: home.cpp  home.h
termiNet-main/screens/widgets/: createpost.cpp
termiNet-main/sql/: auth_trigger.sql  schema.sql
tests/login_signup/: signup_test.cpp  signup_test.h
utils/constants/: apphelper.cpp  apphelper.cpp.autosave  apphelper.h  apphelper.h.autosave
utils/helper/: apphelper.cpp  apphelper.h
(+24 files in other folders)
